--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- css folder start  -->
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,15 +17,17 @@
                 <p>G3 Architects</p>
             </div>
             <nav class="navbar">
-                    
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Log In</a></li>
-
+                <li><a href="#">LogIn</a></li>
             </nav>
         </div>
     </header>
+    <!----------------
+         main start 
+    ---------------->
+
     <main>
         <section class="brand-details">
             <div class="details-title">
@@ -37,6 +41,8 @@
                 <img class="image" src="images\banner.png" alt="">
             </div>
         </section>
+        <!-- --our feature section start  -->
+
         <section class="our-features">
             <div class="feature-images">
                 <div class="image">
@@ -54,17 +60,20 @@
             </div>
             <div class="features-info">
                 <h1 class="features-title">
-                    Quick list <span class="span-1">of Our</span> <span class="span-2"> <br> Features</span>
+                    Quick list <span class="span-1">of Our</span> <span class="span-2"><br>Features</span>
 
                 </h1>
                 <p class="description" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn">Explpre More</button>
             </div>
         </section>
+        <!-- love and enjoy section start  -->
         <section class="love-enjoy">
             <div class="version-quality">
-                <h1 class="version-name">Features you will love & enjoy</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="version-name">
+                    <h1>Features you will love & enjoy</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
                 <div class="version-count">
                    <div class="version">
                         <h2 class="version-title">Dexktop & Mobile Version</h2>
@@ -87,6 +96,9 @@
             </div>
             <div class="figure">
                 <img src="images\architect.png" alt="">
+                <div class="experiens">
+                    <H2>10+ Years <br><span class="exp">experiens</span></H2>
+                </div>
             </div>
         </section>
         <section class="something-others">
@@ -115,6 +127,7 @@
                 </div>
             </div>
         </section>
+        <!-- sponser section start  -->
         <section class="sponsor-brand">
             <div class="sponsor-title">
                 <h1>Our Sponspors</h1>
@@ -139,7 +152,38 @@
             </div>
         </section>
 
+        <!-- extra section start  -->
+
+        <section class="extra-section">
+            <h1 class="tour-title">The future tour plan of the year</h1>
+            <div class="tour">
+                
+                <div class="tour-place">
+                    <img class="place-image" src="images\cox.jpg" alt="">
+                    <h2 class="place-name">Cox bazar sea beach</h2>
+                    <p>Its a big  sea beach of the world. I am proud  because its location my country.THis is beautiful place. Every person should be go to the place.</p>
+                </div>
+                <div class="tour-place">
+                    <img class="place-image" src="images\sajek-valley.jpg" alt="">
+                    <h2 class="place-name">Sajek Vally</h2>
+                    <p>It location chittagong divition rangamati districs.This very beautiful view every morning.This awesome view of the place </p>
+                </div>
+                <div class="tour-place">
+                    <img class="place-image" src="images\sikim.webp" alt="">
+                    <h2 class="place-name">Sikim Area</h2>
+                    <p class="about-place">Sikim location our neghboring country india.This is awesome felling for winter seasson.Its very sweet place of the thier country </p>
+                </div>
+            </div>
+        </section>
+
     </main>
+    <!-- ----------
+        main end
+    ------------ -->
+
+    <!-------------------
+         footer start 
+        -------------- -->
     <footer>
         <div class="footer">
             <h2>All rights reserved copyright@2023 startup landing page design</h2>
