--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="figure">
                 <img src="images\architect.png" alt="">
                 <div class="experiens">
-                    <H2>10+ Years <br><span class="exp">experiens</span></H2>
+                    <H2>10+ Years <p class="exp">Experiens</p></H2>
                 </div>
             </div>
         </section>
