--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
             </div>
             <div class="features-info">
                 <h1 class="features-title">
-                    Quick list <span class="span-1">of Our</span> <span class="span-2"><br>Features</span>
-
-                </h1>
+                    Quick list <span class="span-1"> of Our</span> <span class="span-2">Features</span></h1>
                 <p class="description" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn">Explpre More</button>
             </div>
@@ -155,7 +153,7 @@
         <!-- extra section start  -->
 
         <section class="extra-section">
-            <h1 class="tour-title">The future tour plan of the year</h1>
+            <h1 class="tour-title">The Future Tour Plan Of The Year</h1>
             <div class="tour">
                 
                 <div class="tour-place">
